Tidying up the ampersand in the en.yml file

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,7 +8,7 @@ en:
   construction: "Construction"
   verification: "Verification"
   deployment: "Deployment"
-  sm-title: "Strategy &amp; Metrics"
+  sm-title: "Strategy & Metrics"
   sm1: "Is there a software security assurance program already in place?"
   sm2: "Do most of the business stakeholders understand your organization’s risk profile?"
   sm3: "Is most of your development staff aware of future plans for the assurance program?"
