Finished shifting all the questions into en.yml

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,3 +17,83 @@ en:
   sm6: "Does most of the organization know about what’s required based on risk ratings?"
   sm7: "Is per-project data for cost of assurance activities collected?"
   sm8: "Does your organization regularly compare your security spend with other organizations?"
+  pc-title: "Policy & Compliance"
+  pc1: "Do most project stakeholders know their project’s compliance status?"
+  pc2: "Are compliance requirements specifically considered by project teams?"
+  pc3: "Does the organization utilize a set of policies and standards to control software development?"
+  pc4: "Are project teams able to request an audit for compliance with policies and standards?"
+  pc5: "Are projects periodically audited to ensure a baseline of compliance with policies and standards?"
+  pc6: "Does the organization systematically use audits to collect and control compliance evidence?"
+  eg-title: "Education & Guidance"
+  eg1: "Have most developers been given highlevel security awareness training?"
+  eg2: "Does each project team have access to secure development best practices and guidance?"
+  eg3: "Are most roles in the development process given role-specific training and guidance?"
+  eg4: "Are most stakeholders able to pull in security coaches for use on projects?"
+  eg5: "Is security-related guidance centrally controlled and consistently distributed throughout the organization?"
+  eg6: "Are most people tested to ensure a baseline skillset for secure development practices?"
+  ta-title: "Threat Assessment"
+  ta1: "Do most projects in your organization consider and document likely threats?"
+  ta2: "Does your organization understand and document the types of attackers it faces?"
+  ta3: "Do project teams regularly analyze functional requirements for likely abuses?"
+  ta4: "Do project teams use a method of rating threats for relative comparison?"
+  ta5: "Are stakeholders aware of relevant threats and ratings?"
+  ta6: "Do project teams specifically consider risk from external software?"
+  ta7: "Are all protection mechanisms and controls captured and mapped back to threats?"
+  sr-title: "Security Requirements"
+  sr1: "Do most project teams specify some security requirements during development?"
+  sr2: "Do project teams pull requirements from bestpractices and compliance guidance?"
+  sr3: "Are most stakeholders reviewing access control matrices for relevant projects?"
+  sr4: "Are project teams specifying requirements based on feedback from other security activities?"
+  sr5: "Are most stakeholders reviewing vendor agreements for security requirements?"
+  sr6: "Are the security requirements specified by project teams being audited?"
+  sa-title: "Security Architecture"
+  sa1: "Are project teams provided with a list of recommended third-party components?"
+  sa2: "Are most project teams aware of secure design principles and applying them?"
+  sa3: "Do you advertise shared security services with guidance for project teams?"
+  sa4: "Are project teams provided with prescriptive design patterns based on their application architecture?"
+  sa5: "Are project teams building software from centrally controlled platforms and frameworks?"
+  sa6: "Are project teams being audited for usage of secure architecture components?"
+  dr-title: "Design Review"
+  dr1: "Do project teams document the attack perimeter of software designs?"
+  dr2: "Do project teams check software designs against known security risks?"
+  dr3: "Do most project teams specifically analyze design elements for security mechanisms?"
+  dr4: "Are most project stakeholders aware of how to obtain a formal design review?"
+  dr5: "Does the design review process incorporate detailed data-level analysis?"
+  dr6: "Does routine project audit require a baseline for design review results?"
+  cr-title: "Code Review"
+  cr1: "Do most project teams have review checklists based on common problems?"
+  cr2: "Are project teams generally performing review of selected high-risk code?"
+  cr3: "Can most project teams access automated code analysis tools to find security problems?"
+  cr4: "Do most stakeholders consistently require and review results from code reviews?"
+  cr5: "Do project teams utilize automation to check code against application-specific coding standards?"
+  cr6: "Does routine project audit require a baseline for code review results prior to release?"
+  st-title: "Security Testing"
+  st1: "Are projects specifying some security tests based on requirements?"
+  st2: "Do most projects perform penetration tests prior to release?"
+  st3: "Are most stakeholders aware of the security test status prior to release?"
+  st4: "Are projects using automation to evaluate security test cases?"
+  st5: "Do most projects follow a consistent process to evaluate and report on security tests to stakeholders?"
+  st6: "Are security test cases comprehensively generated for application-specific logic?"
+  st7: "Do routine project audits demand minimum standard results from security testing?"
+  vm-title: "Vulnerability Management"
+  vm1: "Do most projects have a point of contact for security issues?"
+  vm2: "Does your organization have an assigned security response team?"
+  vm3: "Are most project teams aware of their security point(s) of contact and response team(s)?"
+  vm4: "Does the organization utilize a consistent process for incident reporting and handling?"
+  vm5: "Are most project stakeholders aware of relevant security disclosures related to their software projects?"
+  vm6: "Are most incidents inspected for root causes to generate further recommendations?"
+  vm7: "Do most projects consistently collect and report data and metrics related to incidents?"
+  eh-title: "Environment Hardening"
+  eh1: "Do the majority of projects document some requirements for the operational environment?"
+  eh2: "Do most projects check for security updates to third-party software components?"
+  eh3: "Is a consistent process used to apply upgrades and patches to critical dependencies?"
+  eh4: "Do most project leverage automation to check application and environment health?"
+  eh5: "Are stakeholders aware of options for additional tools to protect software while running in operations?"
+  eh6: "Does routine audit check most projects for baseline environment health?"
+  oe-title: "Operational Enablement"
+  oe1: "Do you deliver security notes with the majority of software releases?"
+  oe2: "Are security-related alerts and error conditions documented for most projects?"
+  oe3: "Are most project utilizing a change management process that’s well understood?"
+  oe4: "Do project teams deliver an operational security guide with each product release?"
+  oe5: "Are most projects being audited to check each release for appropriate operational security information?"
+  oe6: "Is code signing routinely performed on software components using a consistent process?"
