Scorecard is now functioning

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,6 +10,8 @@ en:
   verification: "Verification"
   deployment: "Deployment"
   scorecard: "Scorecard"
+  current: "Current"
+  target: "Target"
   sm-title: "Strategy & Metrics"
   sm1: "Is there a software security assurance program already in place?"
   sm2: "Do most of the business stakeholders understand your organization’s risk profile?"
