--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,7 +3,8 @@
 
 en:
   hello: "Hello world"
-  ast-text: "Welcome to the *AST Samm Self Assessment, want to read more about OpenSAMM?"
+  ast-text: "Welcome to the Samm Self Assessment tool"
+  ast-text2: "Want to read more about OpenSAMM?"
   ast-text-clickhere: "Click here"
   governance: "Governance"
   construction: "Construction"
