Tidied up smooth scroller and some of the header text

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,7 +3,7 @@
 
 en:
   hello: "Hello world"
-  ast-text: "Welcome to the Samm Self Assessment tool"
+  ast-text: "Welcome to the SAMM Self Assessment tool"
   ast-text2: "Want to read more about OpenSAMM?"
   ast-text-clickhere: "Click here"
   governance: "Governance"
