--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,10 +13,34 @@ en:
   scorecard: "Scorecard"
   current: "Current"
   target: "Target"
+  question: "Question"
+  response: "Response"
+  rating: "Rating"
+  default: "Default"
+  backtotop: "Back to top"
+  loading: "Loading"
+  customtarget: "Custom Target"
+  updatepassword: "Update Password"
+  signout: "Sign Out"
+  login: "Login"
+  cookies: "Cookies"
+  donothing: "Do Nothing"
+  signup: "Sign Up"
+  forgotpassword: "Forgot your password?"
+  resendpassword: "Reset password confirmation?"
+  saveconfirmation: "We haven't saved online yet .. are you sure you want to quit?"
+  createnewtarget: "Create a new target"
+  statetitle: "Maintaining your state (of mind)"
+  statebody: "<p>Hi,</p> <p>We're keen to ensure that you don't lose you're data, but, we're also keen to ensure that it remains safe. So we thought we would give you some options</p> <p>1. If you don't want to store your data in cookies or online, sure, choose '<strong>Do Nothing</strong>'. But, if you refresh the page, it'll all be gone!</p> <p>2. If you just want to store it in your cookies, select '<strong>Cookies</strong>'.</p> <p>3. And finally, if you want to maintain your data online, '<strong>Login</strong>'. Mind you, you will have to create an account first.</p>"
+  footernull: "No data is being saved in cookies OR online .. but you can change that by <a href='#'>clicking me</a>"
+  footerdont: "You have elected to not save your data in cookies OR online .. if you change your mind <a href='#'>click me</a>"
+  footercookies: "You are currently saving your data to cookies .. if you want to change this, <a href='#'>click here</a>"
+  footeronline: "You\'re signed in - so your data will be saved online until you sign out"
   independentsoftwarevendor: "Independent Software Vendor"
   onlineserviceprovider: "Online Service Provider"
   financialservicesorganisation: "Financial Services Organisation"
   governmentorganisation: "Government Organisation"
+  aboutheader: "About"
   abouttext: "<em>So what is the SAMM Self Assessment tool?</em><br /><br />The SAMM Self Assessment tool is an implementation of the <a href='http://www.opensamm.org' target='_blank'>OpenSAMM</a> process wrapped together into a little Rails application. Its aim is to simplify the measurement of your organisation against <a href='http://www.opensamm.org' target='_bank'>OpenSAMM</a>, and to assist in the construction of a roadmap, and subsequent tracking of progress down that roadmap.<br /><br /><br /><em>Why would you build this?</em><br /><br />Well, simply put, we think that OpenSAMM is a great process to help organisations measure the maturity of security within their software development lifecycle. Plus, we wanted something lightweight that could be stood up on a standalone desktop (with Rails), or even hosted on the Internet (Heroku/EC2/etc)<br /><br /><br /><em>Okay, so why would I measure software security maturity?</em><br /><br />Without this measurement trying to improve the state of security within your software development lifecycle is going to be difficult. As they say: You can't manage what you can't measure.<br /><br /><br /><em>Asterisk Security Toolkit</em><br /><br />Asterisk like building tools to help security professionals out. The <a href='http://asterisklabs.github.io/'>Asterisk Security Toolkit</a> is our collection of tools, all of which are available on our <a href='https://github.com/AsteriskLabs'>GitHub</a>.<br /><br /><br /><em>Questions?</em><br /><br />Feel free to ping us: <a href='https://twitter.com/asteriskinfosec'>@asteriskinfosec</a><br /><a href='http://labs.asteriskinfosec.com.au'>Asterisk Labs</a><br /><a href='http://www.asteriskinfosec.com.au'>www.asteriskinfosec.com.au</a><br /><a href='https://github.com/AsteriskLabs/ssa/issues'>GitHub Issues</a>"
   astabouttext: "The Samm Self Assessment is the first of many applications <a href='http://www.asteriskinfosec.com.au'>Asterisk</a> plan to release within their Asterisk Security Toolset, or *AST."
   dialogtitle: "Are you sure you want to refresh the page?"
